# pond-slime

./: .env  Cargo.toml
.github/workflows/: deploy.yml  test.yml
migrations/2024-02-26-055545_guild_id/: down.sql  up.sql
migrations/2024-02-26-055555_admin_bot_spam/: down.sql  up.sql
src/: main.rs  schema.rs
