[package]
name = "pond-slime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
poise = "0.6.1"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
shuttle-serenity = "0.39.0"
shuttle-shared-db = { version = "0.39.0", features = ["sqlx", "postgres", "sqlx-native-tls"] }
sqlx = "0.7.3"
thiserror = "1.0.57"
tokio = "1.26.0"
tracing = "0.1.37"
uuid = "1.7.0"
