[package]
name = "pond-slime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.34"
diesel = "2.1.4"
diesel-async = { version = "0.4.1", features = [
    "postgres",
    "tokio",
    "deadpool",
] }
poise = "0.6.1"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-diesel-async = { git = "https://github.com/aumetra/shuttle-diesel-async", version = "0.1.0" }
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
shuttle-serenity = "0.39.0"
shuttle-shared-db = { version = "0.39.0", features = ["postgres"] }
thiserror = "1.0.57"
tokio = "1.26.0"
tracing = "0.1.37"
